Scrollbar and various fixes

--- a/scss/main/_normal.scss
+++ b/scss/main/_normal.scss
@@ -25,6 +25,7 @@
 .altTag-3DeQpq,
 .animation-1w3fse,
 .appAvatar-2htirv,
+.applicationLargeImage-2CF5PY,
 .art-xth7-B,
 .artContainer-1yaXct,
 .assetsLargeImage-8U5dlz,
@@ -72,6 +73,7 @@
 .banner-2boKnS,
 .banner-3D8GgT,
 .banner-ppi-o1,
+.bannerContainer-1hFfQ1,
 .bar-1Bhnl9,
 .bar-1GpknY,
 .bar-2eAyLE,
@@ -482,6 +484,7 @@
 .maskBackground-3UP7z9,
 .matchingPostsRow-2IiEQ1,
 .media-1EQ0ve,
+.media-29HL8-,
 .mediaAttachmentsContainer-1WGRWy,
 .mediaBarGrabber-FvJKJg,
 .mediaBarInteractionVolume-zGrOSh,
